--- a/Codsoft/portfolio/index.html
+++ b/Codsoft/portfolio/index.html
@@ -54,7 +54,7 @@
             all users, regardless of their device.
           </p>
           <a
-            href="www.linkedin.com/in/adarsh-mishra-336288178"
+            href="https://instagram.com/adarsh_0115?igshid=NGVhN2U2NjQ0Yg=="
             class="btn" style="margin-bottom: 100px;"
             >Get in touch</a>
         </div>
